--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch==1.11.0+cu113
-torchvision==0.12.0+cu113
-opencv-python==4.1.2
+torch==1.11.0
+torchvision==0.12.0
+opencv-python
 Pillow==7.1.2
 Augmentor
 editdistance
